# snekboros

./: .gitignore  README.md  clear  config.toml  main.py  preprocess.py  pyproject.toml  run  test.py  train.py
data/: test.pt  val.pt
paper/: main.aux  main.fdb_latexmk  main.fls  main.tex
report/: bibliography.bib  main.tex
slides/: bibliography.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  main.vrb
src/: architectures.py  environment.py  policies.py  utils.py
src/downloads/: dinowm.py
src/models/: dino_vision_encoder.py  transition_model.py
