[project]
name = "snekboros"
version = "0.1.0"
description = "Vision World Models for Competitive Snake Playing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["einops>=0.8.2", "torch>=2.10.0", "torchvision>=0.25.0"]

[dependency-groups]
dev = ["ruff>=0.15.7"]

# For PyTorch installation
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Ruff (formatting and linting) configuration
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
